stack4things-improved/yaml_file/iotronic-conductor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: iotronic-conductor
  name: iotronic-conductor
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: iotronic-conductor
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: iotronic-conductor
    spec:
      containers:
        - args:
            - /bin/bash
            - -c
            - |
              [...]
          image: lucadagati/iotronic-conductor:latest
          name: iotronic-conductor
          ports:
            - containerPort: 8812
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/iotronic
              name: iotronic-conductor-cm0
            - mountPath: /var/log/iotronic
              name: iotronic-logs
      restartPolicy: Always
      volumes:
        - configMap:
            name: iotronic-conductor-cm0
          name: iotronic-conductor-cm0
        - name: iotronic-logs
          persistentVolumeClaim:
            claimName: iotronic-logs
