stack4things-improved/yaml_file/iotronic-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: iotronic-db
  name: iotronic-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: iotronic-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: iotronic-db
    spec:
      containers:
        - args:
            - |
              [...]
          command:
            - /bin/bash
            - -c
          image: mariadb:focal
          livenessProbe:
            exec:
              command:
                - mysqladmin
                - ping
                - -h
                - localhost
                - -u
                - root
                - -ps4t
            failureThreshold: 5
            initialDelaySeconds: 40
            periodSeconds: 10
            timeoutSeconds: 5
          name: iotronic-db
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: unime-iotronic-db-data
      restartPolicy: Always
      volumes:
        - name: unime-iotronic-db-data
          persistentVolumeClaim:
            claimName: unime-iotronic-db-data
