stack4things-improved/yaml_file/iotronic-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: iotronic-ui
  name: iotronic-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: iotronic-ui
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: iotronic-ui
    spec:
      containers:
        - image: mdslab/iotronic-ui:latest
          name: iotronic-ui
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /var/log/apache2
              name: iotronic-ui-logs
            - mountPath: /etc/openstack-dashboard
              name: iotronic-ui-cm1
      restartPolicy: Always
      volumes:
        - name: iotronic-ui-logs
          persistentVolumeClaim:
            claimName: iotronic-ui-logs
        - configMap:
            name: iotronic-ui-cm1
          name: iotronic-ui-cm1
