stack4things-improved/yaml_file/iotronic-wagent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: iotronic-wagent
  name: iotronic-wagent
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: iotronic-wagent
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: iotronic-wagent
    spec:
      containers:
        - args:
            - /bin/bash
            - -c
            - |2-
                echo '[INFO] Configurazione dei permessi sui log...';
                chown -R iotronic:iotronic /var/log/iotronic;
                echo '[INFO] Avvio del Wagent...';
                exec /usr/local/bin/iotronic-wamp-agent --config-file /etc/iotronic/iotronic.conf
          image: lucadagati/iotronic-wagent:latest
          name: iotronic-wagent
          volumeMounts:
            - mountPath: /etc/iotronic
              name: iotronic-wagent-cm0
            - mountPath: /var/log/iotronic
              name: iotronic-logs
      restartPolicy: Always
      volumes:
        - configMap:
            name: iotronic-wagent-cm0
          name: iotronic-wagent-cm0
        - name: iotronic-logs
          persistentVolumeClaim:
            claimName: iotronic-logs
