stack4things-improved/yaml_file/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: rabbitmq
    spec:
      containers:
        - env:
            - name: RABBITMQ_DEFAULT_PASS
              value: unime
            - name: RABBITMQ_DEFAULT_USER
              value: openstack
          image: rabbitmq:3.7-management
          name: rabbitmq
          ports:
            - containerPort: 5672
              protocol: TCP
            - containerPort: 15672
              protocol: TCP
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - >
                    sleep 15 &&
                    rabbitmqctl change_password openstack unime || true &&
                    rabbitmqctl set_permissions -p / openstack ".*" ".*" ".*" || true &&
                    rabbitmqctl add_user admin s4t || true &&
                    rabbitmqctl set_user_tags admin administrator || true &&
                    rabbitmqctl set_permissions -p / admin ".*" ".*" ".*" || true
          volumeMounts:
            - mountPath: /var/lib/rabbitmq
              name: rabbitmq-data
      restartPolicy: Always
      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: rabbitmq-data
