stack4things-improved/yaml_file/keystone-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keystone
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keystone-db
  namespace: keystone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keystone-db
  template:
    metadata:
      labels:
        app: keystone-db
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.6
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mariadb-data
          mountPath: /var/lib/mysql
      volumes:
      - name: mariadb-data
        persistentVolumeClaim:
          claimName: keystone-db-data
---
apiVersion: v1
kind: Service
metadata:
  name: keystone-db
  namespace: keystone
spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
  selector:
    app: keystone-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keystone
  namespace: keystone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keystone
  template:
    metadata:
      labels:
        app: keystone
    spec:
      containers:
      - name: keystone
        image: salvospina/iotronic-keystone:federation
        imagePullPolicy: IfNotPresent
        command: ["/usr/local/bin/keystone-entrypoint.sh"]
        ports:
        - containerPort: 5000
          name: api
        volumeMounts:
        - name: keystone-config
          mountPath: /etc/keystone/keystone.conf
          subPath: keystone.conf
        - name: keystone-mapping
          mountPath: /etc/keystone/keystone-mapping.json
          subPath: keystone-mapping.json
        - name: keystone-sso
          mountPath: /etc/keystone/sso_callback.html
          subPath: sso_callback.html
        - name: keystone-wsgi
          mountPath: /etc/apache2/sites-enabled/keystone.conf
          subPath: wsgi-keystone.conf
        - name: keystone-entrypoint
          mountPath: /usr/local/bin/keystone-entrypoint.sh
          subPath: keystone-entrypoint.sh
        readinessProbe:
          httpGet:
            path: /v3
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /v3
            port: 5000
          initialDelaySeconds: 60
          periodSeconds: 10
      volumes:
      - name: keystone-config
        configMap:
          name: keystone-config
      - name: keystone-mapping
        configMap:
          name: keystone-mapping
      - name: keystone-sso
        configMap:
          name: keystone-sso
      - name: keystone-wsgi
        configMap:
          name: keystone-wsgi
      - name: keystone-entrypoint
        configMap:
          name: keystone-entrypoint
          defaultMode: 0777
---
apiVersion: v1
kind: Service
metadata:
  name: keystone
  namespace: keystone
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: api
  selector:
    app: keystone
